Update 'go-axrjfaey' component image to: quay.io/rhtap_qe/go-axrjfaey:eaea6c16e51b2e3f471c4f183a2a17514d8249f5@sha256:af1461a493678e25a551ad1c348c798cb6369116037ca56eaea5ddf52672007a

--- a/components/go-axrjfaey/overlays/development/deployment-patch.yaml
+++ b/components/go-axrjfaey/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-axrjfaey
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-axrjfaey:eaea6c16e51b2e3f471c4f183a2a17514d8249f5@sha256:af1461a493678e25a551ad1c348c798cb6369116037ca56eaea5ddf52672007a
+          name: container-image
